--- a/tasks/elasticsearch.yml
+++ b/tasks/elasticsearch.yml
@@ -1,15 +1,13 @@
 ---
-- name: ES apt repo
-  apt_repository:
-    repo="deb http://packages.elastic.co/elasticsearch/{{ elk_elasticsearch.version }}/{{ ansible_os_family|lower }} stable main"
-    update_cache=yes
-  when: ansible_os_family == 'Debian'
-  sudo: yes
+- name: Add Elasticsearch repository.
+  copy:
+    src: elasticsearch.repo
+    dest: /etc/yum.repos.d/elasticsearch.repo
+    mode: 0644
 
-- name: Install ES apt packages
-  apt: pkg=elasticsearch update_cache=yes state=latest
+- name: Install Elasticsearch.
+  yum: pkg=elasticsearch state=installed update_cache=yes
   sudo: yes
-  when: ansible_os_family == 'Debian'
   notify: Restart elasticsearch
 
 - name: Curator PIP package
