--- a/tasks/logstash.yml
+++ b/tasks/logstash.yml
@@ -1,18 +1,16 @@
 ---
-- name: Logstash apt repo
-  apt_repository:
-    repo="deb http://packages.elastic.co/logstash/{{ elk_logstash.version }}/{{ ansible_os_family|lower }} stable main"
-    update_cache=yes
-  when: ansible_os_family == 'Debian'
-  sudo: yes
+- name: Add Logstash repository.
+  copy:
+    src: logstash.repo
+    dest: /etc/yum.repos.d/logstash.repo
+    mode: 0644
 
-- name: Install logstash apt packages
-  apt: pkg={{ item }} update_cache=yes state=present
+- name: Install Logstash.
+  yum: pkg={{ item }} state=installed
   with_items:
-   - logstash
-   - logstash-contrib
+    - logstash
+    - logstash-contrib
   sudo: yes
-  when: ansible_os_family == 'Debian'
   notify: Restart logstash
 
 - name: Logstash conf file
