--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 - name: Include OS-specific variables
-  include_vars: "{{ ansible_os_family }}.yml"
+  include_vars: "RedHat.yml"
 
-- name: Install common apt packages
-  apt: pkg={{ item }} state=latest update_cache=true
+- name: Install common yum packages
+  yum: pkg={{ item }} state=latest update_cache=true
   with_items: elk_common_packages
   sudo: yes
 
@@ -18,10 +18,10 @@
 - name: Install Java
   include: java.yml
 
-- name: ES apt GPG key
-  apt_key:
-    url='http://packages.elastic.co/GPG-KEY-elasticsearch'
-  when: ansible_os_family == 'Debian'
+- name: Add Elasticsearch GPG key.
+  rpm_key:
+    key: http://packages.elasticsearch.org/GPG-KEY-elasticsearch
+    state: present
   sudo: yes
 
 - name: Install Elasticsearch
