--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,5 @@
 ---
-- name: Include OS-specific variables
-  include_vars: 'RedHat.yml'
+- include_vars: "{{ ansible_os_family }}.yml" 
 
 - name: Install common yum packages
   yum: pkg={{ item }} state=latest update_cache=true
@@ -9,7 +8,7 @@
 
 - name: Monit conf file
   copy:
-    src=monitrc
+    src=files/monitrc
     dest=/etc/monit/monitrc
     owner=root group=root mode=600
   sudo: yes
