--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -12,7 +12,13 @@ elk_java:
     - oracle-java7-set-default
   openjdk:
     - openjdk-7-jre-headless
-  proxy_env:
-    http_proxy: "http://proxy.sgp.hp.com:8080"
-    https_proxy: "http://proxy.sgp.hp.com:8080"
+proxy_env:
+  http_proxy: "http://proxy.sgp.hp.com:8080"
+  https_proxy: "http://proxy.sgp.hp.com:8080"
+
+http_proxy_hostname: "http://proxy.sgp.hp.com"
+http_proxy_port: 8080
+https_proxy_hostname: "http://proxy.sgp.hp.com"
+https_proxy_port: 8080
+no_proxy: "127.0.0.1"
 
