--- a/tasks/java.yml
+++ b/tasks/java.yml
@@ -1,5 +1,5 @@
 ---
-- name: Installing java...
+- name: Installing Java...
   yum: name={{ item }} update_cache=yes state=present
   with_items:
     - java-1.{{ elk_java.version }}.0-openjdk
