copy variables from default to os related

--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -4,6 +4,7 @@ elk_common_packages:
     - python-pip
     - supervisor
     - monit
+
 elk_java:
   version: 7
   flavor: openjdk
@@ -12,6 +13,36 @@ elk_java:
     - oracle-java7-set-default
   openjdk:
     - openjdk-7-jre-headless
+
+elk_elasticsearch:
+  version: 2.1
+  pid_file: /var/run/elasticsearch.pid
+  http:
+    port: 9200
+  hostname: 127.0.0.1
+  cluster: leo
+  path: /var/crash/elasticsearch
+
+elk_logstash:
+  version: 2.1
+  pid_file: /var/run/logstash.pid
+  configs:
+    - { src: logstash-simple.conf.j2, dest: simple.conf }
+  patterns: [] # optional; follows same format as `configs`
+
+elk_kibana:
+  version: 4.0.2-linux-x64
+  path: /var/crash/kibana
+  port: 5601
+  user: kibana # optional; if unset, kibana does not require authentication
+  password: kibana # optional; if unset, kibana does not require authentication
+  allowed_addresses:
+    - 127.0.0.1
+
+elk_nginx:
+  port: 80
+  user: nginx
+
 proxy_env:
   http_proxy: "http://proxy.sgp.hp.com:8080"
   https_proxy: "http://proxy.sgp.hp.com:8080"
@@ -21,4 +52,3 @@ http_proxy_port: 8080
 https_proxy_hostname: "http://proxy.sgp.hp.com"
 https_proxy_port: 8080
 no_proxy: "127.0.0.1"
-
