--- a/playbook.yml
+++ b/playbook.yml
@@ -1,4 +1,6 @@
 ---
-- hosts: localhost 
+- hosts: localhost
+  handlers:
+    - include: handlers/main.yml
   tasks:
     - include: tasks/main.yml
