--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -31,8 +31,8 @@ elk_logstash:
   patterns: [] # optional; follows same format as `configs`
 
 elk_kibana:
-  version: 4.0.2-linux-x64
-  path: /var/crash/kibana
+  version: 4.3.1-linux-x64
+  path: /opt/kibana
   port: 5601
   user: kibana # optional; if unset, kibana does not require authentication
   password: kibana # optional; if unset, kibana does not require authentication
