--- a/tasks/kibana.yml
+++ b/tasks/kibana.yml
@@ -1,10 +1,15 @@
 ---
+- name: Kibana archive available
+  action: wget -P /opt/ --no-check-certificate https://download.elastic.co/kibana/kibana/kibana-{{ elk_kibana.version }}.tar.gz
+  register: new_archive_downloaded
+
 - name: Kibana archive download and uncompressed
   unarchive:
     src=/opt/kibana-{{ elk_kibana.version }}.tar.gz
     dest=/opt copy=no
     owner={{ elk_nginx.user }} group={{ elk_nginx.user }}
   sudo: yes
+  when: new_archive_downloaded|changed
 
 - name: Uncompressed Kibana linked to path
   file:
