added rpm key and repo for nginx

--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -1,21 +1,18 @@
 ---
-- name: Add nginx apt key
-  apt_key:
-    url='http://nginx.org/keys/nginx_signing.key'
-  when: ansible_os_family == 'RedHat'
-  sudo: yes
+- name: Add repo file
+  template: src=files/nginx_centos.repo dest=/etc/yum.repos.d/nginx.repo owner=root group=root mode=0644
 
-- name: Add nginx apt repo
-  apt_repository:
-    repo="deb http://nginx.org/packages/{{ ansible_lsb.id|lower }}/ {{ ansible_lsb.codename }} nginx"
-    update_cache=yes
-  when: ansible_os_family == 'RedHat'
-  sudo: yes
+- name: Add repo key
+  get_url: url=http://nginx.org/keys/nginx_signing.key dest=/etc/pki/rpm-gpg/RPM-GPG-KEY-nginx sha256sum=dcc2ed613d67b277a7e7c87b12907485652286e199c1061fb4b3af91f201be39 force=yes
 
-- name: Install Nginx apt package
-  apt: pkg=nginx state=latest
-  when: ansible_os_family == 'RedHat'
-  sudo: yes
+- name: Add repo key
+  file: path=/etc/pki/rpm-gpg/RPM-GPG-KEY-nginx owner=root group=root mode=0644
+
+- name: Add repo key
+  rpm_key: state=present key=/etc/pki/rpm-gpg/RPM-GPG-KEY-nginx
+
+- name: Install Nginx
+  yum: name=nginx enablerepo=nginx state=present
 
 - name: Disable default servers
   file:
