more modification to suit RH6

--- a/tasks/kibana.yml
+++ b/tasks/kibana.yml
@@ -28,8 +28,8 @@
 
 - name: Supervisor config file
   template:
-    src=kibana-supervisor.j2
-    dest=/etc/supervisor/conf.d/kibana.conf
+    src=supervisor.conf.j2
+    dest=/etc/supervisor.conf
     owner=root group=root mode=644
   sudo: yes
   notify: Restart supervisor
