--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -25,7 +25,7 @@
 
 - name: Restart supervisor
   service:
-    name=supervisor
+    name=supervisord
     enabled=yes state=restarted
   sudo: yes
 
